--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,7 +11,9 @@
             <meta name="author" content="">
         {% endblock %}
 
-            <link rel="stylesheet" type="text/css" href="{{ ASSET_URL }}" />
+            <link rel="stylesheet" type="text/css" href="../static/css/main.css" />
+        
+        <link rel="stylesheet" type="text/css" href="../static/css/main.css"/>
 
         {% block css %}
         {% endblock %}
@@ -25,7 +27,24 @@
         {% endblock %}
 
         {% block body %}
-
+<!--        html in the body goes here-->
+<h1>Timeline</h1>
+        
+            <div id="nav">
+                <ul>
+            	<li class="nav"><a href="#">Timeline</a></li>
+                <li class="nav"><a href="#">About</a></li>
+                <li class="nav"><a href="#">Quiz</a></li>
+                <li class="nav"><a href="#">Resources</a></li>
+                <li class="nav"><a href="#">Search</a></li>
+              <li class="nav"><a href="#">Contact</a></li>
+            </ul>
+				
+			</div>
+		</div>
+        
+        
+        
         {% endblock %}
         
     </body>
