--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -2,7 +2,14 @@
 
 {% block title %}Home{% endblock %}
 
+<script type="text/javascript">
+console.log("hello world!")
+</script>
+
 {% block body %}
 	{{ super() }}
 	<div>Not in base, specific to index.html</div>
+
+
+
 {% endblock %}
