nav bar w/ bootstrap!
need 2 add links

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,8 +7,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
         {% block head_css %}
-             <!-- External CSS files FOR ALL pages are referenced here -->
-            <link rel="stylesheet" type="text/css" href="/static/css/main.css" />
+        <!-- External CSS files FOR ALL pages are referenced here -->
+        <link rel="stylesheet" href="static\css\lib\bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="/static/css/main.css" />
         {% endblock %}
 
         {% block head_js %}
@@ -20,22 +21,77 @@
 
     </head>
     <body>
-
         {% block content %}
         <!-- html in the body goes here -->
-            <h1>Timeline</h1>
+        <nav class="navbar navbar-default">
+          <div class="container-fluid">
 
-            <div class="site-masthead">
-              <div class="container">
-                <nav class="nav">
-                  <a class="nav-item active" href="#">Home</a>
-                  <a class="nav-item" href="#">New features</a>
-                  <a class="nav-item" href="#">Press</a>
-                  <a class="nav-item" href="#">New hires</a>
-                  <a class="nav-item" href="#">About</a>
-                </nav>
-              </div>
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+
+              <a class="navbar-brand" href="#">Timeline
+                <!-- brand image here if needed
+                <img alt="Brand" src="..."> -->
+              </a>
             </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav navbar-right">
+                <li class="active"><a href="#">home<span class="sr-only">(current)</span></a></li>
+
+                <li><a href="#">about us</a></li>
+
+                <li class="dropdown services">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">services<span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="#">community support</a></li>
+                    <li><a href="#">testing</a></li>
+                    <!-- <li role="separator" class="divider"></li>
+                    <li><a href="#">Separated link</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="#">One more separated link</a></li> -->
+                  </ul>
+                </li>
+
+                <li class="dropdown information">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">information<span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="#">about HIV</a></li>
+                    <li><a href="#">prevention</a></li>
+                    <li><a href="#">videos</a></li>
+                  </ul>
+                </li>
+
+                <li><a href="#">community partners</a></li>
+
+                <li class="dropdown get-involved">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">get involved<span class="caret"></span></a>
+                  <ul class="dropdown-menu">
+                    <li><a href="#">advocacy</a></li>
+                    <li><a href="#">volunteer</a></li>
+                    <li><a href="#">classes</a></li>
+                  </ul>
+                </li>
+
+                <li>
+                  <form class="navbar-form navbar-left" role="search">
+                    <div class="form-group">
+                      <input type="text" class="form-control" placeholder="Search">
+                    </div>
+                    <button type="submit" class="btn btn-default">Submit</button>
+                  </form>
+                </li>
+              </ul>
+            </div><!-- /.navbar-collapse -->
+          </div><!-- /.container-fluid -->
+        </nav>
 
         {% endblock %}
 
