--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -1,5 +1,5 @@
-.body {
-  font-family: Proxima Nova;
+body {
+  font-family: Consolas;
 }
 
 .container {
@@ -7,15 +7,3 @@
 }
 
 /* nav links */
-.nav-item {
-  position: relative;
-  display: inline-block;
-  padding: 10px;
-  font-weight: 500;
-  color: #cdddeb;
-}
-.nav-item:hover,
-.nav-item:focus {
-  color: #fff;
-  text-decoration: none;
-}
